# chessfml

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
data/: glow.frag
src/: main.cpp
src/common/: fen.cpp
src/game/: board.cpp  game.cpp  game_state.cpp  moves.cpp
src/include/common/: config.hpp  fen.hpp  font.hpp  utils.hpp
src/include/config/: config.hpp  utils.hpp
src/include/game/: board.hpp  game.hpp  game_state.hpp  moves.hpp  piece.hpp
src/include/states/: game_over.hpp  game_selection.hpp  game_selection_state.hpp  load_game.hpp  load_game_state.hpp  menu.hpp  menu_state.hpp  play.hpp  play_state.hpp  state.hpp  state_manager.hpp
src/include/ui/: board_renderer.hpp  main_menu.hpp  menu_renderer.hpp  render.hpp  renderer.hpp  state_manager.hpp
src/states/: game_over.cpp  game_selection.cpp  game_selection_state.cpp  load_game.cpp  load_game_state.cpp  menu.cpp  menu_state.cpp  play.cpp  play_state.cpp  state_manager.cpp
src/ui/: board_renderer.cpp  main_menu.cpp  menu_renderer.cpp  render.cpp  state_manager.cpp
